--- a/style.css
+++ b/style.css
@@ -227,6 +227,8 @@ header {
 
 .slideShow {
   display: flex;
+  width: 100%;
+  height: 30rem;
 }
 
 .slideShow img {
@@ -308,7 +310,8 @@ header {
 
 .introPics img {
   display: block;
-  width: 100%;
+  width: 80%;
+  margin: 30px;
 }
 
 /****************************************************************/
